kubernetes/base/fe-node/deployment-config.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    app: frontend
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: frontend:latest
        imagePullPolicy: Always
        name: frontend
        resources:
          limits:
            memory: 2048Mi
            cpu: 500m
      restartPolicy: Always
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - frontend
      from:
        kind: ImageStreamTag
        name: frontend:latest
    type: ImageChange
