kubernetes/base/fe-node/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: frontend-svc
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
